--- a/_config.yml
+++ b/_config.yml
@@ -82,9 +82,9 @@ analytics:
 author:
   name             : "Prateek Malhotra"
   avatar           : "Biography.jpg"
-  bio              : "Solar Analyst"
+  bio              : "Solar Analyst, Futr Energy"
   location         : "Noida, India"
-  employer         : "Futr Energy"
+  employer         : 
   pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?user=g-ASg8cAAAAJ&hl=en"
   email            :
