--- a/_config.yml
+++ b/_config.yml
@@ -96,13 +96,13 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/prateek-malhotra"
+  github           : "prateek-malhotra"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
+  linkedin         : "prateek-malhotra"
   orcid            : "http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
