--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "Solar Analyst, Futr Energy"
   location         : "Noida, India"
   employer         : 
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=g-ASg8cAAAAJ&hl=en"
   email            :
   researchgate     : "https://www.researchgate.net/profile/Prateek-Malhotra-2"
@@ -103,13 +103,13 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "prateek-malhotra"
-  orcid            : "http://orcid.org/yourorcidurl"
+  orcid            : "http://orcid.org/0000-0003-0816-3712"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "prateek13061993"
   vine             :
   weibo            :
   xing             :
