--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,13 +1,15 @@
 # main links links
 main:
-  - title: "Publications"
-    url: /publications/
+  # - title: "Publications"
+  #   url: /publications/
 
   # - title: "Talks"
   #   url: /talks/    
 
   # - title: "Teaching"
-  #   url: /teaching/    
+  #   url: /teaching/   
+  - title: "Publications"
+    url: /publications/ 
     
   - title: "Portfolio"
     url: /portfolio/
@@ -17,9 +19,6 @@ main:
     
   - title: "CV"
     url: /cv/
-
-  - title: "Research"
-    url: /research/
     
     
   # - title: "Guide"
