--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,8 +14,8 @@ main:
   # - title: "Portfolio"
   #   url: /portfolio/
         
-  # - title: "Blog Posts"
-  #   url: /year-archive/
+  - title: "Blog Posts"
+    url: https://sunincity.blogspot.com/
     
   - title: "CV"
     url: /cv/
