--- a/_config.yml
+++ b/_config.yml
@@ -82,8 +82,8 @@ analytics:
 author:
   name             : "Prateek Malhotra"
   avatar           : "Biography.jpg"
-  bio              : "Solar Analyst, Futr Energy"
-  location         : "Noida, India"
+  bio              : "Data Scientist, Quadrical AI"
+  location         : "Gurugram, India"
   employer         : 
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=g-ASg8cAAAAJ&hl=en"
